@@ -362,6 +362,9 @@ public class ModelAnalyser {
         for (Signal s : outputs)
             getModelAnalyzerInfo().addPinNumber(s);
 
+        if (CircleDetector.hasCircles(inputs))
+            throw new AnalyseException(Lang.get("err_circuitHasCircles"));
+
         DependencyAnalyser da = new DependencyAnalyser(this);
         long steps = da.getRequiredSteps(this);
 
